--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ html{
 /*  Home   inicio  */
 .home{
     display: flex;
-    background: url(../Portifolio/img/banner.png) no-repeat;
+    background: url(../img/banner.png) no-repeat;
     background-size: cover;
     height: 100vh;
     color: #fff;
